# FogOfWar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  vcpkg.cmake  vcpkg.json
Editor/: CMakeLists.txt
Editor/res/: matpreview.glb
Editor/res/mappings/: Material.xml  Model.xml  Pack.xml  Texture.xml
Editor/res/shaderparams/: PBRGeneric.xml
Editor/src/: EditorViewport.cpp  EditorViewport.hpp  GLView.cpp  GLView.hpp  GameSettings.cpp  MainWindow.cpp  MainWindow.hpp  ResourceHelper.hpp  main.cpp
Editor/src/assetEditor/: AssetPackEditor.cpp  AssetPackEditor.hpp
Editor/src/dialogs/: AssetPackEditor.cpp  AssetPackEditor.hpp
Editor/src/util/: GameSettings.hpp  Process.cpp  Process.hpp  QtHelpers.cpp  QtHelpers.hpp  ResourceHelper.hpp  ShaderParamInfo.cpp  ShaderParamInfo.hpp  Zipper.cpp  Zipper.hpp
Editor/src/widgets/: AssetFileTree.cpp  AssetFileTree.hpp  AssetInspector.cpp  AssetInspector.hpp  ColorButton.cpp  ColorButton.hpp  EditorViewport.cpp  GLView.cpp  ImageViewer.cpp  ImageViewer.hpp  PropertyEditor.cpp  PropertyEditor.hpp  RecentFilesButton.cpp  RecentFilesButton.hpp
Editor/src/widgets/AssetEditor/: AssetFileTree.cpp  AssetFileTree.hpp  AssetInspector.hpp  PropertyEditor.cpp  PropertyEditor.hpp
Editor/src/widgets/GLView/: EditorViewport.cpp  EditorViewport.hpp  GLView.cpp  GLView.hpp  MaterialPreview.cpp  MaterialPreview.hpp
Engine/: CMakeLists.txt
Engine/docs/AdvMapFormat/: AdvMap.md
Engine/include/fow/: AdvMap.hpp  Any.hpp  Assets.hpp  Collections.hpp  Convar.hpp  Core.hpp  Debug.hpp  Editor.hpp  Engine.hpp  Lang.hpp  Renderer.hpp  Result.hpp  Shared.hpp  String.hpp  StringConvertion.hpp  Transform.hpp  Version.hpp
Engine/include/fow/Editor/: EditorInstance.hpp  ImGui.hpp  ImGuiCfg.hpp
Engine/include/fow/Engine/: AdvMap.hpp  Components.hpp  Convar.hpp  Entity.hpp  ImGui.hpp  ImGuiCfg.hpp  KeyCodeWrapper.hpp  UI.hpp
Engine/include/fow/Renderer/: Debug.hpp  GL.hpp  Gui.hpp  Material.hpp  Mesh.hpp  Model.hpp  RenderQueue.hpp  RenderShared.hpp  Shader.hpp  ShaderLib.hpp  Skybox.hpp  Sprite.hpp  Text.hpp  TextSprite.hpp  Texture.hpp
Engine/include/fow/Shared/: Algo.hpp  Aliases.hpp  Api.hpp  Argparse.hpp  Assets.hpp  Collections.hpp  Debug.hpp  Dylib.hpp  Filesys.hpp  GameState.hpp  Lang.hpp  MathHelper.hpp  OsSpec.hpp  PointerHelper.hpp  Result.hpp  Rng.hpp  String.hpp  StringConversion.hpp  StringConvertion.hpp  Transform.hpp  Version.hpp
Engine/include/fow/Shared/OsSpec/: Windows.hpp
Engine/include/glad/: glad.h
Engine/shaders/: shaders.json
Engine/shaders/include/: phong_shared.glsl
Engine/shaders/shaderlib/: ShaderLib.hpp
Engine/shaders/src/: Array2D.fsh  ArraySprite.fsh  DebugDraw.fsh  DebugDraw.vsh  Generic2D.fsh  Generic2D.vsh  Generic3D.vsh  PBRGeneric.fsh  PbrGeneric.fsh  PbrSprite.vsh  PhongLitGeneric.fsh  Rectangle2D.fsh  Rectangle2D.vsh  Sky.fsh  Sky.vsh  Sprite.fsh  Sprite.vsh  StretchSprite2D.fsh  StretchSprite2D.vsh  UnlitGeneric.fsh
Engine/src/Editor/: EditorInstance.cpp
Engine/src/Engine/: AdvMap.cpp  Components.cpp  Convar.cpp  Engine.cpp  Entity.cpp  UI.cpp
Engine/src/Renderer/: Debug.cpp  Gui.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderQueue.cpp  Renderer.cpp  Shader.cpp  ShaderLib.cpp  Skybox.cpp  Sprite.cpp  Text.cpp  TextSprite.cpp  Texture.cpp
Engine/src/Renderer/glad/: glad.c
Engine/src/Shared/: Argparse.cpp  Assets.cpp  Collections.cpp  Debug.cpp  Dylib.cpp  Filesys.cpp  GameState.cpp  Lang.cpp  MathHelper.cpp  Rng.cpp  String.cpp  StringConversion.cpp  Transform.cpp  Version.cpp
Engine/src/Shared/OsSpecific/: Windows.cpp
Game/Example/: CMakeLists.txt  Components.cpp  Components.hpp  FlyCameraComponent.cpp  FlyCameraComponent.hpp  Scenes.hpp  main.cpp  rebuild_shaders.bat  rebuild_shaders.sh
Game/Example/Assets/: Default.style.xml  Default.theme.xml  Lang.json  Pack.xml
Game/Example/Assets/Lang/: hu_hu.json
Game/Example/Assets/Materials/: Cube.material.xml  Duck.material.xml  Light.material.xml  Plane.material.xml  SkyTest.material.xml  test.material.xml
Game/Example/Assets/Models/: Cube.glb  Cube.model.xml  Duck.model.xml  Light.glb  Light.model.xml  LightGizmo.glb  LightGizmo.model.xml  Plane.glb  Plane.model.xml  Sphere.glb  Sphere.model.xml
Game/Example/Assets/Shaders/: Generic3D.shader.xml  Phong3D.shader.xml  test.shader.xml
Game/Example/Assets/Shaders/Source/: Generic3D.fsh  Generic3D.vsh  Phong3D.fsh  test.fsh  test.vsh
Game/Example/Assets/Sprites/: Direction2D.texture.xml  Light.sprite.xml  Light.sprite2d.xml  Light.texture.xml  LightTint.texture.xml  Test.sprite2d.xml
Game/Example/Assets/Sprites/UI/: CheckBox.sprite.xml  CheckBox.texture.xml  Panel.texture.xml  SliderHandle.sprite.xml  SliderHandle.texture.xml  SliderMarker.sprite.xml  SliderMarker.texture.xml  SliderRail.texture.xml
Game/Example/Assets/Textures/: Duck.texture.xml  cubemap_test.texture.xml  cubemap_test_blur.texture.xml  ibl_brdf_lut.texture.xml  sky_test.texture.xml  test.texture.xml  test_i.texture.xml  test_n.texture.xml  test_s.texture.xml  test_tiles.texture.xml  test_tiles_n.texture.xml  test_tiles_phong.texture.xml
Scripts/: compile_shaders.py  package_assets.py
Tests/: CMakeLists.txt
Tests/Shared/: path_test.cpp  string_test.cpp
